--- a/index.html
+++ b/index.html
@@ -5,16 +5,19 @@ layout: null
 <html lang="en">
 
 <head>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <link rel="preload" as="style"
+        href="https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&display=swap">
+
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&display=swap">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="I'm Karo, a 17-year-old software engineer with 6 years of hobbyist programming experience">
 
     {% feed_meta %}
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&display=swap"
-        rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
     <title>Karo's Site</title>
@@ -33,11 +36,13 @@ layout: null
             <hr class="newspaper-top">
             <h1>Karo Roghzai</h1>
             <h4><em>Software Engineer | Privacy Enthusiast | Generalist</em></h4>
-            
+
             <hr class="newspaper-bottom">
+        </div>
+        <main>
             <div class="about">
                 <h3 class="section-header">ABOUT</h3>
-                <p><strong>Hi! My name is Karo.</strong> I'm a 17 year old software engineer with 6 years of hobbyist
+                <p><strong>Hi! My name is Karo.</strong> I'm a 17-year-old software engineer with 6 years of hobbyist
                     experience.</p>
                 <p>I'm a passionate software engineer with a strong belief in the value of continuously learning new
                     things, especially in secondary or unrelated fields like physics, artistry and journalism.</p>
@@ -52,22 +57,24 @@ layout: null
                         target="_blank">on my GitHub</a>.</p>
                 <ul>
                     <li><strong><a href="https://libreassistant.vercel.app" target="_blank">Libre
-                                    Assistant</a></strong> — An open-source, privacy-first AI chat interface built with
-                            Nuxt, using the free <a href="https://ai.hackclub.com">ai.hackclub.com</a> API.</li>
+                                Assistant</a></strong> — An open-source, privacy-first AI chat interface built with
+                        Nuxt, using the free <a href="https://ai.hackclub.com">ai.hackclub.com</a> API.</li>
                     <li><strong><a href="https://webosu-2.github.io/" target="_blank">WebOsu 2</a></strong> — A
-                            vanilla JS implementation of the popular rhythm game Osu!std.</li>
-                    <li><strong><a href="https://github.com/Mostlime12195/N-Body-Simulation"
-                                    target="_blank">N-Body Simulation</a></strong> — C++ N-Body Simulation made using
-                            RayLib, uses multi-threading and is capable of handling thousands of planetary
-                            objects.</li>
+                        vanilla JS implementation of the popular rhythm game Osu!std.</li>
+                    <li><strong><a href="https://github.com/Mostlime12195/N-Body-Simulation" target="_blank">N-Body
+                                Simulation</a></strong> — C++ N-Body Simulation made using
+                        RayLib, uses multi-threading and is capable of handling thousands of planetary
+                        objects.</li>
                 </ul>
             </div>
             <div class="contact">
                 <h3 class="section-header">CONTACT</h3>
                 <p>You can reach me via email at <a
-                        href="mailto:karoroghzai@protonmail.com">karoroghzai@protonmail.com</a>.</p>
+                        href="mailto:karoroghzai@protonmail.com">karoroghzai@protonmail.com</a>.
+                </p>
             </div>
-        </div>
+        </main>
+    </div>
 </body>
 
 </html>
